# utf-7

./: .gitignore  CMakeLists.txt  Makefile  README.md  utf7.c  utf7.h
tests/: conv7.c  tests.c  utf7to8.c  utf8.c  utf8to7.c
